src/components/Header/Search/search.style.scss
.search {
	z-index: 10;
	font-size: 15px;
	width: calc(100% - 200px);
	height: 35px;
	background: #33333360;
	border-radius: 10px;
	border: none;
	outline: none;
	padding-left: 15px;
	color: #b6b6b6;
}

.searchBox {
	z-index: 10;
	overflow-y: auto;
	overflow-x: hidden;
	border: 20px solid transparent;
	display: grid;
	padding: 40px;
	gap: 40px;
	justify-content: center;
	grid-template-columns: repeat(5, 300px);
	width: 60%;
	height: 500px;
	top: 100px;
	border-radius: 15px;
	position: absolute;
	background: rgb(12 12 12 / 85%);
	backdrop-filter: blur(55px);
	animation: show .3s;
}

.searchBox::-webkit-scrollbar-track {
	width: 20px;
}

.searchBox::-webkit-scrollbar-thumb {
	border-radius: 10px;
	background: rgba(49, 49, 49, 0.37);
}

.searchBox::-webkit-scrollbar {
	margin: 0;
	border-radius: 10px;
	background: rgba(12, 12, 12, 0.781);
}

.search-notfound {
	top: 200px;
	overflow: hidden;
	position: absolute;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: max-content;
}

.search-image {
	margin: 40px;
	width: 100px;
}

.mobile-search {
	width: 100%;
	height: 100%;
}

@media screen and (max-width: 2600px) {
	.searchBox {
		grid-template-columns: repeat(4, 300px);
	}
}

@media screen and (max-width: 2000px) {
	.searchBox {
		grid-template-columns: repeat(3, 300px);
	}
}

@media screen and (max-width: 1400px) {
	.searchBox {
		grid-template-columns: repeat(2, 300px);
	}
}

@media screen and (max-width: 1000px) {
	.searchBox {
		grid-template-columns: repeat(1, 300px);
		justify-content: center;
		align-items: center;
	}
}

